// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navbar snapshots userName is falsey snapshot 1`] = `
<DocumentFragment>
  <nav
    class="navbar"
  >
    <ul
      class="navbar-links"
    >
      <li
        class="navbar-links-item"
      >
        <h1>
          <a
            aria-current="page"
            class="active"
            href="/"
          >
            SOUNDCLONE
          </a>
        </h1>
      </li>
      <li
        class="navbar-links-item"
      >
        <a
          aria-current="page"
          class="active"
          href="/"
        >
          Home
        </a>
      </li>
      <li
        class="navbar-links-item"
      >
        <input
          type="text"
        />
        <button
          type="button"
        >
          search
        </button>
      </li>
      <li
        class="navbar-links-item"
      >
        <a
          class=""
          href="/login"
        >
          Login
        </a>
      </li>
    </ul>
  </nav>
</DocumentFragment>
`;

exports[`Navbar snapshots userName is truthy snapshot 1`] = `
<DocumentFragment>
  <nav
    class="navbar"
  >
    <ul
      class="navbar-links"
    >
      <li
        class="navbar-links-item"
      >
        <h1>
          <a
            aria-current="page"
            class="active"
            href="/"
          >
            SOUNDCLONE
          </a>
        </h1>
      </li>
      <li
        class="navbar-links-item"
      >
        <a
          aria-current="page"
          class="active"
          href="/"
        >
          Home
        </a>
      </li>
      <li
        class="navbar-links-item"
      >
        <input
          type="text"
        />
        <button
          type="button"
        >
          search
        </button>
      </li>
      <li
        class="navbar-links-item"
      >
        <a
          class=""
          href="/profile/validName"
        >
          Profile
        </a>
      </li>
      <li
        class="navbar-links-item"
      >
        <a
          class=""
          href="/upload"
        >
          Upload
        </a>
      </li>
      <li
        class="navbar-links-item"
      >
        <a
          class=""
          href="/logout"
        >
          Logout
        </a>
      </li>
    </ul>
  </nav>
</DocumentFragment>
`;
